[package]
name = "bilibili-restapi"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/bilibili-restapi"
# description
# readme

[lib]
name = "bilibili_restapi"
path = "lib.rs"

[dependencies]
bilibili-restapi-model = { path = "../model" }
bilibili-restapi-client = { path = "../client" }

bilibili-restapi-live = { path = "../live" }
