[package]
name = "brapi"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/brapi"
# description
# readme

[lib]
name = "brapi"
path = "lib.rs"

[dependencies]
brapi-model = { path = "../model" }
brapi-client = { path = "../client" }

brapi-live = { path = "../live" }

[[example]]
name = "brapi-example"
path = "example.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
