[package]
name = "brapi-client"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/brapi"
# description
# readme

[lib]
name = "brapi_client"
path = "lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false, features = ["client", "http1"] }
smol-hyper = "0.1"
async-net = "2"
async-tls = { version = "0.13", default-features = false, features = ["client"] }
async-global-executor = "2"
foundations = { git = "https://github.com/Berylsoft/foundations", features = ["error-enum"] }
brapi-model = { path = "../model" }
