[package]
name = "brapi-client"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/brapi"
# description
# readme

[lib]
name = "brapi_client"
path = "lib.rs"

[dependencies]
hex-literal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false, features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http2", "webpki-tokio"] } # aws-lc-rs has build issue
foundations = { git = "https://github.com/Berylsoft/foundations", features = ["error-enum"] }
brapi-model = { path = "../model" }
