[package]
name = "bilibili-restapi-tag"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/bilibili-restapi"
# description
# readme

[lib]
name = "bilibili_restapi_tag"
path = "lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
bilibili-restapi-model = { path = "../model" }

[features]
unclarified_fields = []
useless_fields = []
