[package]
name = "brapi-tag"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/brapi"
# description
# readme

[lib]
name = "brapi_tag"
path = "lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
brapi-model = { path = "../model" }

[features]
unclarified_fields = []
useless_fields = []
