[package]
name = "bilibili-restapi-cli-main"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/bilibili-restapi"
# description
# readme

[[bin]]
name = "bapi"
path = "main.rs"

[dependencies]
argh = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bilibili-restapi-cli-live = { path = "../live" }
bilibili-restapi-client = { path = "../../client" }
