[package]
name = "brapi-cli-main"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/brapi"
# description
# readme

[[bin]]
name = "brapi"
path = "main.rs"

[dependencies]
argh = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
brapi-cli-live = { path = "../live" }
brapi-client = { path = "../../client" }
